# nonebot-plugin-areusleepy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot_plugin_areusleepy/: __init__.py  __main__.py  config.py  getsleepy.py
