[project]
name = "nonebot-plugin-areusleepy"
dynamic = ["version"]
description = "Let bot look!!!"
authors = [
    { name = "Murasame", email = "congyu@sbhfy.cn" },
    { name = "wyf9", email = "wyf9@wyf9.top" },
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.urls]
homepage = "https://github.com/Murasame-Dev/nonebot-plugin-areusleepy"

[dependency-groups]
dev = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_areusleepy/__init__.py"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["plugins"]
builtin_plugins = []
